; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/mshtml/extr_main.c_thread_detach.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/mshtml/extr_main.c_thread_detach.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64 }

@FALSE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @thread_detach to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @thread_detach() #0 {
  %1 = alloca %struct.TYPE_4__*, align 8
  %2 = load i32, i32* @FALSE, align 4
  %3 = call %struct.TYPE_4__* @get_thread_data(i32 %2)
  store %struct.TYPE_4__* %3, %struct.TYPE_4__** %1, align 8
  %4 = load %struct.TYPE_4__*, %struct.TYPE_4__** %1, align 8
  %5 = icmp ne %struct.TYPE_4__* %4, null
  br i1 %5, label %7, label %6

6:                                                ; preds = %0
  br label %20

7:                                                ; preds = %0
  %8 = load %struct.TYPE_4__*, %struct.TYPE_4__** %1, align 8
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %17

12:                                               ; preds = %7
  %13 = load %struct.TYPE_4__*, %struct.TYPE_4__** %1, align 8
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = call i32 @DestroyWindow(i64 %15)
  br label %17

17:                                               ; preds = %12, %7
  %18 = load %struct.TYPE_4__*, %struct.TYPE_4__** %1, align 8
  %19 = call i32 @heap_free(%struct.TYPE_4__* %18)
  br label %20

20:                                               ; preds = %17, %6
  ret void
}

declare dso_local %struct.TYPE_4__* @get_thread_data(i32) #1

declare dso_local i32 @DestroyWindow(i64) #1

declare dso_local i32 @heap_free(%struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
